# FolderPainter

./: .gitignore  .tmp_HEAD_ChatView.tsx  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_EN.md  fluent-design.md  package-lock.json  package.json  vite.config.ts
.github/scripts/: check-version.cjs
.github/workflows/: ci.yml  release.yml
scripts/: generate_ico.py  generate_icons.py
src/: App.css  App.tsx  AppLayout.css  AppLayout.tsx  ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  ChatView.css  ChatView.tsx  IconPreviewCard.css  IconPreviewCard.tsx  PreviewModal.css  PreviewModal.tsx  SettingsPanel.css  SettingsPanel.tsx  animations.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  bg_removal.rs  chat_agent.rs  commands.rs  config.rs  desktop_ini.rs  error.rs  history.rs  icon_gen.rs  icon_storage.rs  lib.rs  prompts.rs  text_ai.rs  windows_api.rs
src-tauri/src/preview/: mod.rs  store.rs
src-tauri/src/templates/: mod.rs  store.rs
src-tauri/tests/: chat_agent_test.rs  desktop_ini_test.rs  windows_api_test.rs
src/components/: ConfirmDialog.css  ConfirmDialog.tsx  Dialogs.css  Dialogs.tsx  FolderPreviewItem.css  FolderPreviewItem.tsx  ImagePreviewModal.css  ImagePreviewModal.tsx  PreviewPanel.css  PreviewPanel.tsx  ProgressBar.css  ProgressBar.tsx  TemplateEditor.css  TemplateEditor.tsx  TemplatePanel.css  TemplatePanel.tsx  VersionThumbnail.css  VersionThumbnail.tsx
src/hooks/: useChatAgent.ts  useFolderSelection.ts  (+5 more)
(+18 files in other folders)
